[project]
name = "badwords"
version = "2.0.0"
requires-python = ">=3.13"
authors = [
  {name = "iamlostshe", email = "vanamelcikov7275@gmail.com"},
  {name = "FlacSy", email = "flacsy.x@gmail.com"},
]
description = "This is a library for effective moderation of content."
readme = "README.md"
license = {text = "MIT License"}
keywords = [
  "moderation",
  "content filtering",
  "obscenity detection",
  "mood analysis",
  "image moderation"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FlacSy/badwords"
Repository = "https://github.com/FlacSy/badwords.git"
Issues = "https://github.com/FlacSy/badwords/issues"

[tool.ruff]
select = ["ALL"]
